lib/src/compiler/tests/testdata/errors/133.out
error[E001]: syntax error
 --> line:3:19
  |
3 |     "foo" matches /foo
  |                   ^^^^ unclosed regular expression
  |